# UATU-Audit

./: .env.example  .gitignore  DOCKER.md  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  PAYMENTS_IMPLEMENTATION.md  PAYMENTS_README.md  PRODUCTION.md  PRODUCTION_CHECKLIST.md  README.md  README_SETUP.md  cleanup.sh  cookies.txt  dashboard.env.example  deploy-dashboard.sh  docker-compose.yml  foundry.toml  fresh_cookies.txt  package.json  pyproject.toml  requirements.txt  risk-files.txt  run_backend.py  run_dashboard.py  session.txt  setup.py  test_mock_audit.py
.github/workflows/: audit.yml  portfolio-comment.md
auditor/: cli.py  colors.py  core.py  flows.py  journeys.py  models.py  stride.py  utils.py
auditor/badges/: status.py  svg.py
auditor/dashboard/: __init__.py  auth.py  centralized_logging.py  models.py  run_indexer.py  security.py  server.py  views.py  views_clean.py  views_complete.py  wallet_auth.py
auditor/llm/: clustering.py  engine.py  policy.py
auditor/plugins/: __init__.py  base.py
auditor/portfolio/: aggregate.py
auditor/report/: __init__.py  builder.py  pdf.py  print-letter.css  print.css
auditor/risk/: scoring.py
auditor/runners/: __init__.py  cargo_runner.py  docker_runner.py  (+2 more)
backend/: main.py  requirements.txt  uatu_audit.db
baseline/: evm-sample.risk.json  risk.json  stellar-counter.risk.json
contracts/: AuditOrders.sol  AuditOrdersV2.sol
docs/: config.md  csv-format.md  ops-one-pager.md  post-launch-runbook.md  production-handover.md  quick-reference.md
examples/: sensitive.sol
examples/soroban-basic/: Cargo.toml
examples/soroban-basic/src/: lib.rs
scripts/: deploy-contract.sh  deploy-v2-contract.sh  discover_contracts.py  onchain-listener.ts
test/: AuditOrdersV2.t.sol
test_outputs/: sample_audit_report.txt  sensitive_audit_report.txt
tools/: echidna.yaml  foundry.toml  import_legacy_audits.py  mythril.ini
(+82 files in other folders)
