[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-auditor"
version = "0.1.0"
description = "Multi-chain, STRIDE-driven smart contract auditor (orchestrator + plugins)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "You" }]
dependencies = [
  "typer[all]>=0.12.0",
  "pydantic>=2.6.0",
  "jinja2>=3.1.0",
  "jsonschema>=4.6.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
  "openai",
  "anthropic",
  "tenacity",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "authlib>=1.2.0,<2.0.0",
  "python-multipart>=0.0.6",
  "weasyprint>=61.0",
  "itsdangerous>=2.1.0",
  "starlette>=0.27.0",
  "httpx>=0.25.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4"
]

[project.scripts]
auditor = "auditor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["auditor"]
